kubernetes/mino/minio.yml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: minio-deployment
  namespace: minio
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: minio
    spec:
      # Refer to the PVC created earlier
      volumes:
      - name: storage
        emptyDir: {}
#        cephfs:
#          monitors:
#            - 192.168.100.60:6789
#          user: admin
#          secretRef:
#            name: ceph-secret-minio
#          path: "/minio"
      containers:
      - name: minio
        # Pulls the default Minio image from Docker Hub
        image: minio/minio:RELEASE.2017-06-13T19-01-01Z
        args:
        - server
        - /storage
        ports:
        - containerPort: 9000
          hostPort: 9000
        # Mount the volume into the pod
        volumeMounts:
        - name: storage # must match the volume name, above
          mountPath: "/storage"
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: minio
spec:
  type: LoadBalancer
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: minio
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
  annotations:
    ingress.kubernetes.io/proxy-body-size: 3000m
spec:
  rules:
  - host: minio.clickyab.ae
    http:
      paths:
      - path: /
        backend:
          serviceName: minio-service
          servicePort: 9000
